# kuberay-sdk

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml  docs.yml  e2e.yml  release.yml
.specify/memory/: constitution.md
docs/: 404.md  changelog.md  index.md
docs/developer-guide/: architecture.md  code-style.md  contributing.md  development-setup.md  testing.md
docs/examples/: advanced-config.md  async-client.md  capability-discovery.md  cli-usage.md  cluster-basics.md  compound-operations.md  config-env-vars.md  convenience-imports.md  dry-run-preview.md  index.md  job-submission.md  mnist_training.ipynb  openshift-features.md  presets-usage.md  progress-callbacks.md  ray-serve-deployment.md
docs/user-guide/: async-usage.md  cli-reference.md  cluster-management.md  configuration.md  error-handling.md  experiment-tracking.md  job-submission.md  migration.md  new-features.md  openshift.md  ray-serve.md  rich-display.md  storage-runtime-env.md  troubleshooting.md
docs/user-guide/getting-started/: installation.md  quick-start.md
examples/: advanced_config.py  async_client.py  capability_discovery.py  cli_usage.py  cluster_basics.py  compound_operations.py  config_and_env_vars.py  convenience_imports.py  dry_run_preview.py  job_submission.py  mnist_training.ipynb  openshift_features.py  presets_usage.py  progress_callbacks.py  ray_serve_deployment.py
scripts/: gen_ref_pages.py
specs/001-kuberay-python-sdk/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-kuberay-python-sdk/checklists/: requirements.md
specs/001-kuberay-python-sdk/contracts/: api.py  crd_schemas.py
specs/002-automated-docs-site/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-automated-docs-site/checklists/: requirements.md
specs/003-ci-release-contributing/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-sdk-ux-enhancements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-rich-display-output/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/kuberay_sdk/: __init__.py  async_client.py  capabilities.py  client.py  config.py  errors.py  presets.py  retry.py
src/kuberay_sdk/cli/: __init__.py  job.py  (+4 more)
tests/: conftest.py
tests/contract/: test_cluster_crd.py  test_dashboard_api.py  test_job_crd.py  test_service_crd.py
tests/docs/: test_migration.py  test_troubleshooting.py
tests/e2e/: __init__.py  conftest.py  test_smoke.py
tests/integration/: test_cluster_lifecycle.py  test_job_lifecycle.py  test_notebook_rendering.py  test_openshift.py  test_service_lifecycle.py
tests/unit/: test_capabilities.py  test_cli.py  test_client.py  test_cluster_service.py  test_compound.py  test_config_file.py  test_dashboard.py  test_dry_run.py  test_errors.py  test_handle_progress.py  test_handle_repr.py  test_handles_repr.py  test_imports.py  test_job_service.py  test_models.py  test_platform.py  test_presets.py  test_progress.py  test_progress_callback.py  test_retry.py  test_service_service.py
(+53 files in other folders)
